--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,14 @@
         android:layout_height="71dp"
         android:ems="10"
         android:inputType="number"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/button_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.754" />
+        app:layout_constraintVertical_bias="0.754"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView5"
@@ -43,33 +45,23 @@
         app:layout_constraintVertical_bias="0.684" />
 
     <ScrollView
-        android:id="@+id/scroll1"
-        style="@android:style/Widget.DeviceDefault.ScrollView"
-        android:layout_width="292dp"
-        android:layout_height="275dp"
-        android:clipToPadding="false"
-        android:fillViewport="false"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbarStyle="outsideOverlay"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
+        android:id="@+id/scrollView2"
+        android:layout_width="383dp"
+        android:layout_height="291dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.033"
-        tools:visibility="visible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="263dp"
-                android:layout_height="137dp"
-                android:text="" />
+                android:id="@+id/intents"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" " />
         </LinearLayout>
     </ScrollView>
 
